# City-Builder

./: .gitignore  Cargo.toml
.cargo/: config.toml
assets/shaders/: blur.wgsl  constants.wgsl  prelude.wgsl  terrain_erosion.wgsl  terrain_erosion_template.wgsl  terrain_material_template.wgsl  terrain_mesh_gen.wgsl  test.wgsl
src/: asset_builder.rs  assets.rs  camera.rs  chunk.rs  constants.rs  cursor.rs  debug.rs  main.rs  math_utils.rs  menu.rs  mesh_generator.rs  save.rs  shader_preprocessing.rs  shaders.rs  utils.rs  world.rs  world_gen.rs
src/asset_builder/: camera.rs  walls.rs
src/assets/: asset_loader.rs
src/chunk/: chunk_tile_position.rs
src/menu/: main_menu.rs
src/utils/: blur.rs  direction.rs  math.rs
src/world/: buildings.rs  game_time.rs  heightmap.rs  heightmap_generator.rs  resources.rs  road.rs  terraform.rs  tile_highlight.rs  tools.rs  vehicles.rs
src/world/road/: intersection.rs  pathfinding.rs  road_struct.rs  road_tile.rs
src/world_gen/: consts.rs  erosion.rs  heightmap.rs  mesh_gen.rs  noise_gen.rs  noise_generator.rs  terrain_material.rs
src/world_gen/noise_gen/: circle_noise.rs
