[package]
name = "city-builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array2d = "0.3.0"
bevy = "0.12.0"
bevy_mod_raycast = "0.16.0"
enum-map = "2.7.2"
image = "0.24.7"
itertools = "0.12.0"
line_drawing = "1.0.0"
noise = "0.8.2"
num-traits = "0.2.17"
pathfinding = "4.3.3"
petgraph = "0.6.4"
rand = "0.8.5"
rayon = "1.8.0"
smooth-bevy-cameras = "0.10.0"
strict-num = "0.1.1"
strum = "0.25.0"
strum_macros = "0.25.0"
wave-function-collapse = "0.2.0"
